<resources>
    <string name="app_name">FootballApp</string>

    <string name="id_english_premier_league">4328</string>
    <string name="id_english_league_championship">4329</string>
    <string name="id_german_bundes_liga">4331</string>
    <string name="id_italian_serie_A">4332</string>
    <string name="id_french_ligue_1">4334</string>
    <string name="id_spanish_la_liga">4335</string>

    <string name="english_premier_league">English Premier League</string>
    <string name="english_league_championship">English League Championship</string>
    <string name="german_bundes_liga">German Bundesliga</string>
    <string name="italian_serie_A">Italian Serie A</string>
    <string name="french_ligue_1">French Ligue 1</string>
    <string name="spanish_la_liga">Spanish La Liga</string>

    <array name="league_list">
        <item>Spanish La Liga</item>
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
    </array>

    <array name="match_list">
        <item>Past Match</item>
        <item>Next Match</item>
    </array>

    <string name="favorites">Favorites</string>
    <string name="favorites_team">Favorites Team</string>
    <string name="favorites_match">Favorites Match</string>
    <string name="past_match">Past Match</string>
    <string name="next_match">Next Match</string>
    <string name="no_data">Data not found</string>
    <string name="vs">VS</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineup">Lineups</string>
    <string name="goalkeeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitute">Substitutes</string>
    <string name="home">Home :</string>
    <string name="away">Away :</string>
    <string name="deleted">Deleted from favorite</string>
    <string name="add_favorite">Add to favorite</string>
    <string name="teams">Teams</string>
    <string name="match">Match</string>
    <string name="search">Search</string>
    <string name="my_match">My Match</string>
    <string name="my_team">My Team</string>
    <string name="weight">Weight</string>
    <string name="height_">Height</string>
    <string name="no_parameter">empty_parameter</string>
    <string name="favorite_match">Favorite Match</string>
    <string name="favorite_team">Favorite Team</string>
    <string name="player_picture">Player Picture</string>
    <string name="home_badge_">home_badge</string>
    <string name="away_badge_">away_badge</string>


</resources>
